# oracle-hcm-mcp

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker.local.env.example
src/: main.rs
src/mcp/: error.rs  hcm.rs  mod.rs
src/mcp/http/: client.rs  mod.rs
src/mcp/tools/: absence_balance.rs  absence_types.rs  mod.rs  person_id.rs  projected_balance.rs
