[package]
name = "oracle-hcm-mcp"
description = "High-Performance mcp server for Oracle HCM (Human Capital Management)"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", branch = "main", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
    "schemars",
    "reqwest",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
] }
schemars = "1"
dotenv = "0.15"
thiserror = "2"
oauth2 = { version = "5.0", default-features = false, features = ["rustls-tls"] }
chrono = "0.4"

[profile.release]
lto = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
nursery = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
string_slice = "deny"
pedantic = "deny"
